[package]
name = "warp-runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
tower = { version = "0.4.13", features = ["limit"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Our own deps
warp = { git = "https://github.com/Satellite-im/Warp", rev = "ea9065927e" }
warp-ipfs = { git = "https://github.com/Satellite-im/Warp", rev = "ea9065927e" }
warp-blink-wrtc = { git = "https://github.com/Satellite-im/Warp", rev = "ea9065927e" }
